# finance_analyst_team

./: investment_principles.txt  main.py  pyproject.toml  ui_simple.py
finance_analysts/: agents.py  graph.py  investment_knowledge.py  portfolio_advisor.py  state.py  techincal.md  tools.py  trading.py
